--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "http-server": "^14.1.1"
-  }
+  },
+  "description": ""
 }
